--- a/Pipfile
+++ b/Pipfile
@@ -1,14 +1,13 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
 
 [packages]
-sqlalchemy = "*"
 click = "*"
+sqlite3 = "*"
 
 [dev-packages]
-pytest = "*"
 
 [requires]
 python_version = "3.10.12"
